# picon-rs

./: Cargo.toml  Makefile  README.md  README.zh-CN.md  build.help
.github/workflows/: action.yml
picon/: Cargo.toml  build.rs
picon/app/: build.gradle
picon/app/src/main/: AndroidManifest.xml
picon/app/src/main/res/values/: styles.xml
picon/src/: about.rs  apikey.rs  app.rs  config.rs  latest.rs  lib.rs  stats.rs  theme.rs  tr.rs  trending.rs  util.rs  version.rs
script/: crypto.sh  latest-error.json  latest.json  latest.sh  trending.sh
win/: version.h
