[package]
name = "na-egui"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
log = "0.4"
pollster = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4"
anyhow = "1.0"
image = "0.24"
webbrowser = "0.8"

egui = {version = "0.22",  features = ["color-hex"] }
egui_extras = "0.22"
egui-wgpu = { version = "0.22", features = [ "winit" ] }
egui-winit = { version = "0.22", default-features = false, features = [ "android-native-activity", "links"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"]}
env_logger = "0.10"
platform-dirs = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
reqwest = { version = "0.11", features = ["rustls-tls", "native-tls-vendored",  "json", "blocking"]}
android_logger = "0.13"

[features]
default = []
desktop = []

[lib]
name="na_egui"
crate_type=["cdylib"]

[[bin]]
path="src/lib.rs"
name="picon"
required-features = [ "desktop" ]

[build-dependencies]
cmd_lib = "1.3"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "2.3"
